@@ -206,6 +206,24 @@
 
 	  <widget>
 	    <class>GtkMenuItem</class>
+	    <name>save_groups1</name>
+	    <signal>
+	      <name>activate</name>
+	      <handler>on_save_groups1_activate</handler>
+	      <last_modification_time>Sat, 26 Jan 2002 08:02:09 GMT</last_modification_time>
+	    </signal>
+	    <label>Save groups</label>
+	    <right_justify>False</right_justify>
+	  </widget>
+
+	  <widget>
+	    <class>GtkMenuItem</class>
+	    <name>separator3</name>
+	    <right_justify>False</right_justify>
+	  </widget>
+
+	  <widget>
+	    <class>GtkMenuItem</class>
 	    <name>exit</name>
 	    <accelerator>
 	      <modifiers>GDK_CONTROL_MASK</modifiers>
