@@ -63,6 +63,7 @@ class Shape_chooser: public Object_browser, public Shape_draw
 	GtkWidget *shape_scroll;	// Vertical scrollbar.
 	GtkWidget *find_text;		// For searching.
 	GtkAdjustment *frame_adj;	// Adjustment for frame spin btn.
+	GtkWidget *popup;		// Popup menu in draw area.
 	int index0;			// Index of top-leftmost in
 					//   displayed list.
 	int framenum0;			// Default frame # to display.
