@@ -1,3 +1,9 @@
+2002-01-26  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* mapedit/:  'Groups' of shapes are starting to work, with a group
+	opened by double-clicking its name, and shapes added to it by
+	dragging them to its window.
+
 2002-01-25  Darke  <darkepaw@users.sourceforge.net>
 	* mapedit/, usecode/compiler/: Namespaces.
 
